# sphaera

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pr.yaml
adr/: frontend.md
backend/: pyproject.toml
backend/src/sphaera/: __init__.py
frontend/: package-lock.json  package.json
frontend/config/: env.js  modules.js  paths.js  webpack.config.js
frontend/scripts/: build.js  start.js
frontend/src/: App.tsx
